--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,6 @@
     <script src="./index.js"></script>
     <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
     <script src="./script.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
