--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hellen адский английский</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -16,9 +16,12 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <!-- ----------------------УДАЛИТЬ! кнопка для теста модалки--------------------- -->
+    <button type="button" data-modal-open>ТЕСТ КНОПКА ДЛЯ ПРОВЕРКИ МОДАЛКИ</button>
+    <!-- ------------------------------------------------------------------- -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
@@ -38,6 +41,6 @@
     <script src="./index.js"></script>
     <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
     <script src="./script.js"></script>
-    <script src="./js/modal.js"></script>
+    <script src="./modal.js"></script>
   </body>
 </html>
