--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
     <include src="./partials/header.html"></include>
@@ -38,5 +42,6 @@
     <script src="./index.js"></script>
     <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
     <script src="./script.js"></script>
+    <script src="./animation.js"></script>
   </body>
 </html>
