--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
     <script src="./script.js"></script>
-    <script src="./modal.js"></script>
+    <script src="./modal-form.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
