getter all js files to one

--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,7 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./modal.js"></script>
-    <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>\
-    <script src="./animation.js"></script>
+    <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
