--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,13 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/icons/favicon.ico" type="image/x-icon" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
-    <!-- ----------------------УДАЛИТЬ! кнопка для теста модалки--------------------- -->
-    <button type="button" data-modal-open>ТЕСТ КНОПКА ДЛЯ ПРОВЕРКИ МОДАЛКИ</button>
-    <!-- ------------------------------------------------------------------- -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
